# codex-remote-terminal

./: .gitignore  README.md  ble_indicator.py  codex_remote_http.py  package-lock.json  package.json  start_codex_remote.sh
hardware/pico2w/: CMakeLists.txt  README.md
hardware/pico2w/docs/: flashing-and-reading.md
hardware/pico2w/scripts/: build-codex-pico-ble-indicator.sh  flash-codex-pico-ble-indicator.sh
hardware/pico2w/src/: btstack_config.h  codex_pico_ble_indicator.c  codex_pico_ble_indicator.gatt  tusb_config.h
static/: app.js  index.html  shortcuts.json  style.css
